Add Control API (#279)
