# runner/gateway.openapi.yaml
@@ -924,6 +924,12 @@ components:
           type: string
           title: Publish Url
           description: Destination URL of the outgoing stream to publish.
+        control_url:
+          type: string
+          title: Control Url
+          description: URL for subscribing via Trickle protocol for updates in the
+            live video-to-video generation params.
+          default: ''
         model_id:
           type: string
           title: Model Id
@@ -950,10 +956,15 @@ components:
           type: string
           title: Publish Url
           description: Destination URL of the outgoing stream to publish to
+        control_url:
+          type: string
+          title: Control Url
+          description: URL for updating the live video-to-video generation
       type: object
       required:
       - subscribe_url
       - publish_url
+      - control_url
       title: LiveVideoToVideoResponse
       description: Response model for live video-to-video generation.
     MasksResponse:
